mpegtsmux: Require parsed/framed input for most of the supported formats

https://bugzilla.gnome.org/show_bug.cgi?id=719519